# rustsmith-viewer

./: .gitignore  install.sh  pyproject.toml
rustsmith_viewer/: main.py
rustsmith_viewer/templates/: item.jinja2  stats.jinja2
tests/: test_rustsmith_viewer.py
