[tool.poetry]
name = "rustsmith-viewer"
version = "0.1.0"
description = ""
authors = ["Mayank Sharma <mayank.sharma.uk@gmail.com>"]
include = ["static/*"]

[tool.poetry.scripts]
rsmith-viewer = "rustsmith_viewer.main:main"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.1"
Pygments = "^2.10.0"
uvicorn = "^0.16.0"
Jinja2 = "^3.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
